[package]
name = "fb-template-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.4", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread","rt", "macros"] }
reqwest = { version = "0.11", default-features = false }
eyre = "0.6"
env_logger = "0.9.0"
log = "0.4.16"
serde_json = "1.0.91"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
ethers-flashbots = { version = "0.13.0" }


tracing = "0.1.36"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter", "ansi"] }

[features]
default = ['openssl']
openssl = ['ethers/openssl', 'reqwest/default-tls']
rustls = ['ethers/rustls', 'reqwest/rustls-tls']